--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#home" class="home" tabindex="1" id="home">Home</a></li>
                     <li><a href="#calendar">Calendar</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="#location">Location</a></li>
                     <span><a href="#" class="login list">Login</a></span>
                     <span><a href="#" class="signup list">Sign Up</a></span>
                 </ul>
@@ -126,11 +126,53 @@
             </div>
         </div>
     </div>
+    
+    <div class="about-us">
+        <div class="container">
+            <div class="tour-title">
+                <h1>About Us</h1>
+            </div>
+            <div class="about-container">
+                <div class="award">
+                    <i class="fa-solid fa-award"></i>
+                    <p>We are Certified</p>
+                </div>
+                <div class="award">
+                    <i class="fa-solid fa-certificate"></i>
+                    <p>Award Winning Travel Agency</p>
+                </div>
+                <div class="award">
+                    <i class="fa-solid fa-gem"></i>
+                    <p>Know every hidden gems in Bali</p>
+                </div>
+                <div class="award">
+                    <i class="fa-solid fa-star"></i>
+                    <p>Highly Rated</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="location" id="location">
+        <div class="container">
+            <div class="tour-title">
+                <h1>Find Us!</h1>
+            </div>
+
+            <div class="maps">
+                <a href="https://goo.gl/maps/KAqeDRnQ5WUiNHwm8" target="blank">
+                    <img src="asset/maps.png" alt="maps">
+                </a>
+            </div>
+            <i class="fa-solid fa-hand-pointer" style="font-size: 60px;"></i>
+            <h4 style="text-align: center;">Click the Map to get our location!</h4>
+        </div>
+    </div>
 
     <div class="contact" id="contact">
         <div class="container">
             <div class="tour-title">
-                <h1>Call Us!</h1>
+                <h1>Send Us A Message!</h1>
             </div>
             <div class="contact-wrapper">
                 <div class="contact-form">
@@ -139,7 +181,7 @@
                     <p>Nomor telepon untuk di hubungi :</p>
                     <input type="number" name="" id="" placeholder="Ex : 0813-xxx-xxx">
                     <p>Pertanyaan atau Saran :</p>
-                    <textarea name="" id="" cols="40" rows="10"></textarea><br>
+                    <textarea style="resize: none;" name="" id="" cols="40" rows="10"></textarea><br>
                     <input type="submit" name="" id="submit" value="Kirim!">
                 </div>
                 <div class="contact-img">
@@ -161,7 +203,7 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#contact">Contact Us</a></li>
-                        <li><a href="#">Location</a></li>
+                        <li><a href="#location">Location</a></li>
                     </ul>
                 </div>
             </div>
@@ -180,6 +222,8 @@
             }, 1000
         );
 
+        // Hamburger
+
         const hamburger = document.querySelector('.hamburger');
         const navMenu = document.querySelector('.header-list');
 
@@ -192,6 +236,7 @@
             hamburger.classList.remove("active");
             navMenu.classList.remove("active");
         }))
+        
     </script>
 </body>
 </html>
