--- a/index.html
+++ b/index.html
@@ -10,25 +10,21 @@
     <script src="https://kit.fontawesome.com/3be4a3beda.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header  id="home">
         <div class="container">
             <nav>
                 <div class="logo">Travel With Us</div>
                 <ul class="header-list">
-                    <li><a href="#home" class="home" tabindex="1" id="home">Home</a></li>
+                    <li><a href="#home" class="home" tabindex="1">Home</a></li>
                     <li><a href="#calendar">Calendar</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="#location">Location</a></li>
-                    <span><a href="#" class="login list">Login</a></span>
-                    <span><a href="#" class="signup list">Sign Up</a></span>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-                <a href="#" class="login login-nav">Login</a>
-                <a href="#" class="signup signup-nav">Sign Up</a>
             </nav>
         </div>
     </header>
@@ -205,6 +201,9 @@
                         <li><a href="#contact">Contact Us</a></li>
                         <li><a href="#location">Location</a></li>
                     </ul>
+                    <div class="up">
+                        <a href="#home"><i class="fa-solid fa-house"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
